# comprep

./: pyproject.toml
comprep/: __init__.py  _comprep_template.zsh  argparse_completion.py  comprep.py
tests/: test_comprep.py
