[tool.poetry]
name = "comprep"
version = "0.2.0"
description = ""
authors = ["riku.okajima <riku.okajima@gmail.com>"]
include = ["comprep/_comprep_template.zsh"]

[tool.poetry.dependencies]
python = "^3.8"
colorama = "^0.4.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
